Hope this will fix the scrolling on iOs (details)

--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -64,8 +64,9 @@
 }
 
 body {
-  background: var(--color-background);
+  background: transparent;
   margin: 0;
+  padding: 0;
   justify-content: center;
   color: var(--color-text);
   background: var(--color-background);
